--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: PSIndependenceTest
 Title: Indpendence tests for two-way, three-way and four-way contingency tables
-Version: 0.0.1
+Version: 0.0.2
 Authors@R: 
     person("Piotr", "Sulewski", , "piotr.sulewski@apsl.edu.pl", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-0788-6567"))
@@ -8,6 +8,7 @@ Description: The PSIndependenceTest package presents two indpendence tests for t
 Depends:
     R (>= 3.5.0)
 License: GPL-3
+Language: en-US
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
