--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: PSIndependenceTest
-Title: Independence Tests for Two-way, Three-way and Four-way Contingency Tables
+Title: Independence Tests for Two-Way, Three-Way and Four-Way Contingency Tables
 Version: 0.0.1
 Authors@R: 
     person("Piotr", "Sulewski", , "piotr.sulewski@apsl.edu.pl", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-0788-6567"))
-Description: Presentation two independence tests for two-way, three-way and four-way contingency tables. These tests are: the modular test and the logarithmic minimum test. For details on this method see: Sulewski (2018) <doi:10.1080/02664763.2018.1424122>, Sulewski (2019) <doi:https://doi.org/10.2478/bile-2019-0003>, Sulewski (2021) <doi:10.1080/00949655.2021.1908286>.
+Description: Presentation two independence tests for two-way, three-way and four-way contingency tables. These tests are: the modular test and the logarithmic minimum test. For details on this method see: Sulewski (2017) <doi:10.18778/0208-6018.330.04>, Sulewski (2018) <doi:10.1080/02664763.2018.1424122>, Sulewski (2019) <doi:10.2478/bile-2019-0003>, Sulewski (2021) <doi:10.1080/00949655.2021.1908286>.
 Depends:
     R (>= 3.5.0)
 License: GPL-3
